--- a/codecrafters.yml
+++ b/codecrafters.yml
@@ -1,7 +1,7 @@
 # Set this to true if you want debug logs.
 #
 # These can be VERY verbose, so we suggest turning them off
-# unless you really need them.
+# unless you really need them. debug test
 debug: true
 # Use this to change the Rust version used to run your code
 # on Codecrafters.
